prevent pre blocks from overflowing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,11 +15,9 @@ p > code {
 pre {
     padding: 10px;
     background-color: rgba(27,31,35,.05) !important;
-}
-
-code > span {
-    overflow-x:scroll;
-    max-width: 100%;
+    display: inline-block;
+    overflow-x: auto;
+    max-width: calc(100% - 20px);
 }
 
 .footnote-definition, blockquote, details {
